Fix #2046 - Overlapping Blocking Icon on Tips

--- a/frontend/src/components/dashboard/tips/Tips.module.scss
+++ b/frontend/src/components/dashboard/tips/Tips.module.scss
@@ -52,6 +52,7 @@
   background-color: $color-white;
   width: $content-sm;
   max-width: calc(100% - $spacing-xl);
+  z-index: 1;
 
   .header {
     display: flex;
